CR-2004-12-02-4: Testsuite: added new format specifier: SFN2

CR-2004-12-02-3: Bugfix:    fix of CR-2004-12-02-2 (end of string character
                            would not been written when dst_len is reached)
                 Changed:   utilib
                 Review:    RH

CR-2004-12-02-2: Bugfix:    replace_params() in utilib did not check dst_len
                            parameter.
                 Changed:   utilib
                 Review:    RH

CR-2004-12-02-1: Cleanup:   - re-adjust qping man page for 2nd qmaster message
                              thread
                            - a reserved port service will only allow reserved
                              port clients
                            - hostname resolve timeouts can now be set via 
                              environment variables
                            - general commlib error callback function will now
                              log error strings with a size till 200 chars
                              (was 100 chars before)
                 Changed:   qping man page, basis_types.h, commlib, messages
                 Review:    MD

CR-2004-12-02-0: Bugfix:    Fixed broken build for alinux22

HP-2004-12-01-0: Enhancem.: Changes for Windows Port
                 Review:    EB

CR-2004-12-01-1: Enhancem.: improved performance of lGetElemStrLike()
                 Review:    HP

SG-2004-12-01-0: Enhancem.: limited the amount of data send to change the busy
                            state in the event client.
                 Review:    EB
                 Changed:   scheduler, master

CR-2004-12-01-0: Enhancm.:  qping -dump now can unpack gdi requests and print
                            out the message data
                 Changed:   commlib qping
                 Review:    AA

SD-2004-11-30-0: Bugfix:  : Updated security.html with proper information about
                            the kerberos and GSSAPI security code.
