@@ -1,3 +1,9 @@
+CR-2004-12-03-0: Bugfix:    rollback of CR-2004-12-02-3 and CR-2004-12-02-2
+                            adding the dst_len check caused problems, because
+                            some invoking function are not setting the correct
+                            dst_len. Created an issue to rework replace_params()
+                            function.
+
 CR-2004-12-02-4: Testsuite: added new format specifier: SFN2
 
 CR-2004-12-02-3: Bugfix:    fix of CR-2004-12-02-2 (end of string character
